refactored into attendance records management