@@ -1,31 +1,34 @@
-package com.attendease.backend.osaModule.service.management.event.monitoring;
+package com.attendease.backend.osaModule.service.management.attendance.records;
 
+import com.attendease.backend.domain.enums.AttendanceStatus;
 import com.attendease.backend.domain.enums.EventStatus;
 import com.attendease.backend.domain.events.EventSessions;
 import com.attendease.backend.domain.records.AttendanceRecords;
-import com.attendease.backend.domain.records.Response.EventAttendeesRecordsResponse;
+import com.attendease.backend.domain.records.Response.AttendeesResponse;
+import com.attendease.backend.domain.records.Response.EventAttendeesResponse;
 import com.attendease.backend.repository.attendanceRecords.AttendanceRecordsRepository;
 import com.attendease.backend.repository.eventSessions.EventSessionsRepository;
 import com.attendease.backend.repository.students.StudentRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDateTime;
 import java.util.*;
 
 @Service
 @RequiredArgsConstructor
-public class EventSessionMonitoringService {
+public class EventAttendanceRecordsManagementService {
 
     private final EventSessionsRepository eventSessionsRepository;
     private final AttendanceRecordsRepository attendanceRecordsRepository;
-    private final StudentRepository studentRepository;
 
     public List<EventSessions> getOngoingEvents() {
-        return eventSessionsRepository.findByEventStatusIn(Arrays.asList(EventStatus.ONGOING, EventStatus.UPCOMING));
+        return eventSessionsRepository.findByEventStatusIn(List.of(EventStatus.ONGOING));
     }
 
-    public List<EventSessions> getEndedEvents() {
-        return eventSessionsRepository.findByEndDateTimeBeforeAndEventStatus(new Date(), EventStatus.ONGOING);
+    public List<EventSessions> getFinalizedEvents() {
+        return eventSessionsRepository.findByEventStatusIn(List.of(EventStatus.FINALIZED));
     }
 
     public List<EventSessions> getAllSortedByCreatedAt() {
@@ -36,17 +39,17 @@ public class EventSessionMonitoringService {
         return eventSessionsRepository.findById(id);
     }
 
-    public List<EventAttendeesRecordsResponse> getAttendeesByEvent(String eventId) {
+    public EventAttendeesResponse getAttendeesByEvent(String eventId) {
         List<AttendanceRecords> records = attendanceRecordsRepository.findByEventEventId(eventId);
 
-        return records.stream()
+        List<AttendeesResponse> attendees = records.stream()
                 .filter(Objects::nonNull)
                 .filter(record -> record.getStudent() != null && record.getStudent().getUser() != null)
                 .map(record -> {
                     var student = record.getStudent();
                     var user = student.getUser();
 
-                    return EventAttendeesRecordsResponse.builder()
+                    return AttendeesResponse.builder()
                             .userId(user.getUserId())
                             .firstName(user.getFirstName())
                             .lastName(user.getLastName())
@@ -64,10 +67,20 @@ public class EventSessionMonitoringService {
 
                             .attendanceStatus(record.getAttendanceStatus())
                             .reason(record.getReason())
+                            .attendanceRecordId(record.getRecordId())
                             .build();
                 })
                 .distinct()
                 .toList();
+
+        return EventAttendeesResponse.builder()
+                .totalAttendees(attendees.size())
+                .attendees(attendees)
+                .build();
+    }
+
+    public List<AttendanceRecords> getAttendanceRecordsByStudentId(String studentId) {
+        return attendanceRecordsRepository.findByStudentId(studentId);
     }
 }
 
